--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,6 +19,7 @@ jobs:
           - "7.3"
           - "7.4"
           - "8.0"
+          - "8.1"
         dependencies:
           - "lowest"
           - "highest"
@@ -47,6 +48,8 @@ jobs:
             symfony-yaml: '^6'
           # symfony/yaml v3.4 is not compatible with PHP 8.0 but has no upper-bound, so it installs on it
           - php: '8.0'
+            symfony-yaml: '^3.4'
+          - php: '8.1'
             symfony-yaml: '^3.4'
 
     runs-on: ${{ matrix.os }}
